Contact search - controller - view - model - routes and seed

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,4 +1,3 @@
-// Import your components CSS files here.
-@import "alert";
-@import "avatar";
-@import "navbar";
+@import "contact_cards";
+@import "search_bar";
+@import "banner";
