--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,15 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+    <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1590082197310-aff5ed08579f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1567&q=80)">
+      <div class="container" style="height: 100vh">
+        <h1>Hire a talent </h1>
+          <div class="container text-center" style="margin-top: 120px;">
+            <%= link_to "Search", contacts_path, class: "btn btn-flat" %>
+          </div>
+        </div>
+         <!--     <a class="btn btn-flat" href="#">Apply now</a> -->
+      </div>
+    </div>
+
+
+
+
+
