--- a/app/assets/stylesheets/components/_contact_cards.scss
+++ b/app/assets/stylesheets/components/_contact_cards.scss
@@ -1,21 +1,34 @@
+
+// contact cards
+
 .cards {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 400px;
   margin: auto;
   text-align: center;
   font-family: arial;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 16px;
 }
 
 .card {
   margin-bottom: 15px;
-  height: 259px;
+  height: 272px;
+  background-color: #f7f7f7;
 
+}
+
+// Cards icons
+
+.fas {
+  color: #393e46;
 }
 
 .title {
   color: grey;
   font-size: 18px;
 }
+
+// Search and back button
 
 button {
   border: none;
