--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -34,4 +34,5 @@
       <%= link_to "Back to home page", root_path, class: "btn btn-primary back-button" %>
     </div>
   </div>
+  <%= render 'shared/footer' %>
 </div>
